--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <title>To read list</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="book-icon.png">
+  <link rel="icon" type="image/x-icon" href="book-icon.ico">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Lato&family=Prata&display=swap" rel="stylesheet">
